Fix word-wrap buggbug messing with mobile

--- a/python/ecep/portal/static/css/application.css
+++ b/python/ecep/portal/static/css/application.css
@@ -1433,6 +1433,12 @@ a:focus {
     padding-bottom: 125px;
 }
 
+.families-container p,
+.resources-container p,
+.enroll-container p {
+    word-break: break-word;
+}
+
 .families-content,
 .resources-content,
 .enroll-content {
